--- a/alien_project/index.html
+++ b/alien_project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALIEN.AI© — Interactive Visual Archive</title>
+    <title>ALIEN.AI</title>
     <style>
         * {
             margin: 0;
